<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_booking"
        android:title="@string/nav_make_reservation"
        android:icon="@drawable/ic_booking"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_my_bookings"
        android:title="@string/nav_my_bookings"
        android:icon="@drawable/ic_booking"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />






</menu>
