<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".activities.BookingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_title_make_reservation"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_select_date"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/buttonSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_choose_date"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_select_time"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/buttonSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_choose_time"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_number_of_people"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextNumberOfPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/booking_people_hint_example"
        android:inputType="number"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/buttonFindTables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_find_available_tables"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"/>

</LinearLayout>
