<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="196dp"
    android:background="@drawable/staff_header_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingTop="20dp"
    android:paddingRight="18dp"
    android:paddingBottom="18dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/staff_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_glass_avatar"
        android:padding="12dp"
        android:contentDescription="@string/staff_avatar"
        app:srcCompat="@drawable/ic_staff" />

    <TextView
        android:id="@+id/staff_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/staff_name"
        android:textAppearance="@style/StaffHeaderNameText"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/staff_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitchen_staff_role_with_emoji"
        android:textAppearance="@style/StaffHeaderRoleText"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

</LinearLayout>